Add the intro section

--- a/index.html
+++ b/index.html
@@ -40,9 +40,16 @@
             <img src="./assets/hero-img.png" alt="campus One Home Page">
             TODO: Create a new branch and try parallax with bg-attachment-fixed
         </div>
-
-        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-        <script src="script.js"></script>
     </section>
+
+    <section class="intro container">
+        <h2>This is an effort <span class="text-red">(a big one)</span> towards building a vibrant community of forward thinkers by recognizing talent, boosting collaboration and generating true college culture. </h2>
+        <h1 class="special second">3rdDecemeber</h1>
+    </section>
+
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="script.js"></script>
+
 </body>
 </html>
