--- a/index.html
+++ b/index.html
@@ -47,6 +47,25 @@
         <h1 class="special second">3rdDecemeber</h1>
     </section>
 
+    <section class="container" id="features">
+        <div class="row">
+            <div class="img-stack">
+                <img src="/assets/Explore.png" alt="">
+                <img src="/assets/Explore-top.png" alt="">
+            </div>
+            <div class="text">
+                <div class="detail">
+                    <h3>Engage in meaningful conversations</h3>
+                    <p>Explore and engage with students of the college and spark interesting and productive conversations.</p>    
+                </div>
+                <div class="detail">
+                    <h3>Categorize into relevant streams</h3>
+                    <p>Explore and engage with students of the college and spark interesting and productive conversations.</p>    
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="script.js"></script>
