Set up the feature block and make it responsive

--- a/index.html
+++ b/index.html
@@ -64,6 +64,22 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="img-stack">
+                <img src="/assets/Explore.png" alt="">
+                <img src="/assets/Explore-top.png" alt="">
+            </div>
+            <div class="text">
+                <div class="detail">
+                    <h3>Engage in meaningful conversations</h3>
+                    <p>Explore and engage with students of the college and spark interesting and productive conversations.</p>    
+                </div>
+                <div class="detail">
+                    <h3>Categorize into relevant streams</h3>
+                    <p>Explore and engage with students of the college and spark interesting and productive conversations.</p>    
+                </div>
+            </div>
+        </div>
     </section>
 
 
