Add the second feature row

--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
         </div>
         <div class="row">
             <div class="img-stack">
-                <img src="/assets/Explore.png" alt="">
-                <img src="/assets/Explore-top.png" alt="">
+                <img src="/assets/Updates feat.png" alt="">
+                <img src="/assets/botm.png" alt="">
             </div>
             <div class="text">
                 <div class="detail">
-                    <h3>Engage in meaningful conversations</h3>
-                    <p>Explore and engage with students of the college and spark interesting and productive conversations.</p>    
+                    <h3>All updates in one place</h3>
+                    <p>Find all the updates from the GCET clubs, the professors and the college under one roof and never miss out on exciting opportunities and possibilities.</p>    
                 </div>
                 <div class="detail">
-                    <h3>Categorize into relevant streams</h3>
-                    <p>Explore and engage with students of the college and spark interesting and productive conversations.</p>    
+                    <h3>Book of the Month</h3>
+                    <p>Book of the month because why not? Every month you get a book recommendation by the admins and you can keep track of your reading status</p>    
                 </div>
             </div>
         </div>
