Add the profile feature

--- a/index.html
+++ b/index.html
@@ -82,6 +82,21 @@
         </div>
     </section>
 
+    <section class="profile container">
+        <div class="text">
+            <h3>Visit interesting profiles</h3>
+            <p>Book of the month because why not? Every month you get a book recommendation by the admins and you can keep track of your reading status</p>
+        </div>
+        <img src="/assets/Profile.png" alt="Profile">
+        <div class="more">
+            <h3>Some more features...</h3>
+            <p class="capsule">XP Points</p>
+            <p class="capsule">Leaderboard</p>
+            <p class="capsule">Alumni Connect</p>
+            <p>+ so much more</p>
+        </div>
+    </section>
+
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="script.js"></script>
