--- a/index.html
+++ b/index.html
@@ -97,6 +97,24 @@
         </div>
     </section>
 
+    <section id="footer">
+        <h1 class="special">ContactMe</h1>
+        <footer class="container">
+            <div class="footnotes">
+                <h3>An initiative by <span class="text-red">Pratik Kuril</span></h3>
+                <p>Reach out to me to contribute and build this project together or simply visit the Github</p>
+            </div>
+            <ul class="links">
+                <li>
+                    <a href="#" class="btn-secondary">View on Github</a>
+                </li>
+                <li>
+                    <a href="mailto:pratikkurilworks@gmail.com" class="btn-secondary">Email Me</a>
+                </li>
+            </ul>
+        </footer>
+    </section>
+
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="script.js"></script>
