--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="left">
             <p class="capsule">Coming Soon!</p>
             <h1>The GCET Virtual Community</h1>
-            <p>Explore and engage with students of the college and spark interesting and productive conversations.</p>
+            <p class="para">Explore and engage with students of the college and spark interesting and productive conversations.</p>
             <form class="subscribe" id="form">
                 <input type="email" name="email" id="email" placeholder="Your college email address" required>
                 <button class="btn-primary" type="submit" id="submit">
@@ -38,7 +38,7 @@
         </div>
         <div class="right">
             <img src="./assets/hero-img.png" alt="campus One Home Page">
-            TODO: Create a new branch and try parallax with bg-attachment-fixed
+            <!-- TODO: Create a new branch and try parallax with bg-attachment-fixed -->
         </div>
     </section>
 
