Update the links and add favicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campus One Coming Soon</title>
+    <link rel="shortcut icon" href="/assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="styles.css">
@@ -16,7 +17,7 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="#features">Features</a></li>
-            <li><a href="#" class="btn-secondary">View on Github</a></li>
+            <li><a href="https://github.com/CampusUno/CampusOne" class="btn-secondary" target="_blank">View on Github</a></li>
         </ul>
     </nav>
 
@@ -114,12 +115,12 @@
         <h1 class="special">ContactMe</h1>
         <footer class="container">
             <div class="footnotes">
-                <h3>An initiative by <span class="text-red">Pratik Kuril</span></h3>
-                <p>Reach out to me to contribute and build this project together or simply visit the Github</p>
+                <h3>An initiative by <a href="https://instagram.com/kurilpratik" target="_blank"><span class="text-red">Pratik Kuril</span></a></h3>
+                <p>Reach out to me to contribute and build this project together or simply visit the Github and don't forget to star the repository.</p>
             </div>
             <ul class="links">
                 <li>
-                    <a href="#" class="btn-secondary">View on Github</a>
+                    <a href="https://github.com/CampusUno/CampusOne" class="btn-secondary">View on Github</a>
                 </li>
                 <li>
                     <a href="mailto:pratikkurilworks@gmail.com" class="btn-secondary">Email Me</a>
