Fix overflowing width, close #1

--- a/index.html
+++ b/index.html
@@ -47,14 +47,18 @@
         </div>
     </section>
 
-    <section class="intro container">
-        <h2>This is an effort <span class="text-red">(a big one)</span> towards building a vibrant community of forward thinkers by recognizing talent, boosting collaboration and generating true college culture. </h2>
-        <h1 class="special second" 
+    <section class="intro">
+        <div class="flex">
+            <h2>This is an effort <span class="text-red">(a big one)</span> towards building a vibrant community of forward thinkers by recognizing talent, boosting collaboration and generating true college culture. </h2>
+        </div>
+
+        <!-- <h1 class="special second" 
             data-aos="slide-left" 
             data-aos-duration="1000" 
             data-aos-easing="ease-in-out"
             data-aos-mirror="true"
-        >3rdDecemeber</h1>
+        >3rdDecemeber</h1> -->
+        <h1 class="special">3rdDecember</h1>
     </section>
 
     <section class="container" id="features">
@@ -120,7 +124,7 @@
             </div>
             <ul class="links">
                 <li>
-                    <a href="https://github.com/CampusUno/CampusOne" class="btn-secondary">View on Github</a>
+                    <a href="https://github.com/CampusUno/CampusOne" class="btn-secondary" target="_blank">View on Github</a>
                 </li>
                 <li>
                     <a href="mailto:pratikkurilworks@gmail.com" class="btn-secondary">Email Me</a>
