Update the copy of coming soon page

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <section class="hero">
         <div class="left">
             <p class="capsule">Coming Soon!</p>
-            <h1>The GCET Virtual Community</h1>
-            <p class="para">Explore and engage with students of the college and spark interesting and productive conversations.</p>
+            <h1>The Galgotias Student Platform</h1>
+            <p class="para">Explore and engage with students of the college and spark interesting conversations, follow club updates and find exciting opportunities.</p>
             <form class="subscribe" id="form">
                 <input type="email" name="email" id="email" placeholder="Your college email address" required>
                 <button class="btn-primary" type="submit" id="submit">
@@ -74,7 +74,7 @@
                 </div>
                 <div class="detail">
                     <h3>Categorize into relevant streams</h3>
-                    <p>Explore and engage with students of the college and spark interesting and productive conversations.</p>    
+                    <p>All conversation threads are clubbed into channels known as 'streams' for easier access.</p>    
                 </div>
             </div>
         </div>
@@ -99,7 +99,7 @@
     <section class="profile container">
         <div class="text">
             <h3>Visit interesting profiles</h3>
-            <p>Book of the month because why not? Every month you get a book recommendation by the admins and you can keep track of your reading status</p>
+            <p>You can find profiles of all the college students, view their details and other stats, and most importantly network with the best minds. Proudly share your profile badge that displays your contributions!</p>
         </div>
         <img src="/assets/Profile.png" alt="Profile"
             data-aos="zoom-in-up"
